<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Mushaf.Quran.Tblway.Tablawy">



    <RelativeLayout
        android:id="@+id/myrz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000">
        <ImageView
            android:id="@+id/imagez"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/d1" />

        <TextView
            android:id="@+id/text1z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/imagez"
            android:text="@string/one3"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1z"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/imagez"
            android:text="@string/two3"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text3z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tet2"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/imagez"
            android:text="@string/three3"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lasttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3z"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/imagez"
            android:text="@string/forr3"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/myritng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lasttext"
            android:layout_toRightOf="@id/imagez"
            android:background="#161515"
            android:numStars="3"
            android:stepSize=".5" />


        <LinearLayout
            android:id="@+id/mylinz"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/myritng"
            android:layout_margin="5dp">

            <VideoView
                android:id="@+id/my_first_videoz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/my_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mylinz"
            android:background="#000"
            app:tabIndicatorColor="#fff"
            app:tabSelectedTextColor="#d4af37"
            app:tabTextColor="#fff" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/my_tv_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/my_tab"
            android:layout_margin="5dp" />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view1"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_toRightOf="@id/myritng"
            android:layout_below="@id/lasttext"
            app:lottie_fileName="lo.json"
            app:lottie_loop="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</RelativeLayout>