<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:fitsSystemWindows="true"
    tools:context="com.Mushaf.Quran.Reader.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >
            <ImageView
                android:src="@drawable/s"
                app:layout_collapseMode="parallax"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.Toolbar
                app:layout_collapseMode="pin"
                android:id="@+id/usebar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:background="#000"
        android:layout_height="match_parent">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:elevation="20sp"
    app:cardCornerRadius="20dp"
    android:layout_margin="8dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:background="#000"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/yasser"
                android:layout_gravity="center"
                android:id="@+id/image_number_one"
                android:layout_width="match_parent"
                android:layout_height="180dp"/>
            <Button

                android:text="@string/yasset"
                android:id="@+id/btn_number_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/mn"
                android:layout_gravity="center"
                android:id="@+id/image_number_two"
                android:layout_width="match_parent"
                android:layout_height="180dp"/>
            <Button
                android:text="@string/manshyw"
                android:id="@+id/btn_number_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/tab"
                android:layout_gravity="center"
                android:id="@+id/image_number_three"
                android:layout_width="match_parent"
                android:layout_height="180dp"/>
            <Button
                android:text="@string/tablay"
                android:id="@+id/btn_number_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/bast"
                android:layout_gravity="center"
                android:id="@+id/image_number_for"
                android:layout_width="match_parent"
                android:layout_height="180dp"/>
            <Button
                android:text="@string/abdalbast"
                android:id="@+id/btn_number_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="fitXY"
                android:src="@drawable/kh"
                android:layout_gravity="center"
                android:id="@+id/image_number_six"
                android:layout_width="match_parent"
                android:layout_height="180dp"/>
            <Button
                android:text="@string/x1"
                android:id="@+id/btn_number_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </LinearLayout>

</androidx.cardview.widget.CardView>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>